Added Google Verification

--- a/structural.html
+++ b/structural.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="google-site-verification" content="XKn1yNjV0cSHNzp4ep5KVX8qWes8Zu2JZaEYS3My37k" />
     <title>Gallery | Rovimat Construction</title>
     <meta name="Description" content="A trusted Toronto-Area general contractor with over 10 years of experience, we've done everything from small renovations to major whole-home or commercial projects. Our builds are superior quality and many of our clients rave about our &ldquo;Magazine-Quality&rdquo; workmanship. Give your next project the Rovimat Touch.">
     <meta name="Keywords" content="General Contracting, Contractor, Construction, Kitchen, Bathroom, Renovations, Building, Decks, Fence, Landscaping, Painting, Electrical, Whole home, Modern ">
